perbaikan bug pada komentar

--- a/dev/udangan-nikah-iqbal-fauziah/style.css
+++ b/dev/udangan-nikah-iqbal-fauziah/style.css
@@ -655,7 +655,7 @@ ul li a.active svg {
 /* Commentbox styles */
 /* Comment Form styles */
 .comment-form {
-	margin-bottom: 20px;
+	margin: 20px;
 }
 
 .comment-form input,
