update comment box view

--- a/dev/Template-1/assets/css/style.css
+++ b/dev/Template-1/assets/css/style.css
@@ -144,9 +144,9 @@ body {
 	background-position: center;
 }
 
-.rsvp-content {
-	height: 100%;
-}
+	/* .rsvp-content {
+		height: 100%;
+	} */
 .rsvp-body {
 	width: 100%;
 	margin: 0 auto;
