--- a/dev/Template-1/assets/css/style.css
+++ b/dev/Template-1/assets/css/style.css
@@ -4,7 +4,21 @@ body {
 	background-image: url('../img/main-bg.jpg');
 	font-family: 'Merienda', cursive;
 }
+/* cover */
+.cover {
+	background-image: url('../img/BG6.png'); /* Ganti dengan URL gambar Anda */
+	height: 100vh;
+	background-size: cover;
+	background-position: center;
+}
 
+.cover-content {
+	height: 100%;
+}
+.cover-body {
+	width: 50%;
+	margin: 0 auto;
+}
 /* salam */
 
 .salam {
@@ -144,7 +158,7 @@ body {
 	background-position: center;
 }
 
-	/* .rsvp-content {
+/* .rsvp-content {
 		height: 100%;
 	} */
 .rsvp-body {
