--- a/dev/Template-1/assets/css/style.css
+++ b/dev/Template-1/assets/css/style.css
@@ -6,6 +6,7 @@ body {
 }
 /* cover */
 .cover {
+	color: antiquewhite;
 	background-image: url('../img/BG1.png'); /* Ganti dengan URL gambar Anda */
 	height: 100vh;
 	background-size: cover;
