--- a/dev/Template-1/assets/css/style.css
+++ b/dev/Template-1/assets/css/style.css
@@ -5,6 +5,15 @@ body {
 	font-family: 'Merienda', cursive;
 }
 
+html {
+	scroll-snap-type: y mandatory;
+}
+
+section {
+	scroll-snap-align: start;
+	transition: transform 0.5s ease-in-out;
+}
+
 /* cover */
 .cover {
 	color: antiquewhite;
