--- a/dev/Template-1/assets/css/style.css
+++ b/dev/Template-1/assets/css/style.css
@@ -34,7 +34,7 @@ section {
 /* salam */
 
 .salam {
-	background-image: url('../img/BG6.png'); /* Ganti dengan URL gambar Anda */
+	background-image: url('../img/bg10.png'); /* Ganti dengan URL gambar Anda */
 	height: 100vh;
 	background-size: cover;
 	background-position: center;
